--- a/font/demo.html
+++ b/font/demo.html
@@ -756,11 +756,11 @@ body {
 }
 </style><style type="text/css">@font-face {
   font-family: 'entypo';
-  src: url('../font/entypo.eot?19335616');
-  src: url('../font/entypo.eot?19335616#iefix') format('embedded-opentype'),
-       url('../font/entypo.woff?19335616') format('woff'),
-       url('../font/entypo.ttf?19335616') format('truetype'),
-       url('../font/entypo.svg?19335616#entypo') format('svg');
+  src: url('entypo.eot?8644018');
+  src: url('entypo.eot?8644018#iefix') format('embedded-opentype'),
+       url('entypo.woff?8644018') format('woff'),
+       url('entypo.ttf?8644018') format('truetype'),
+       url('entypo.svg?8644018#entypo') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -770,7 +770,7 @@ body {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'entypo';
-    src: url('../font/entypo.svg?19335616#entypo') format('svg');
+    src: url('../font/entypo.svg?8644018#entypo') format('svg');
   }
 }
 */
